# EventMap

./: .dockerignore  .gitignore  README.md  index.html  map_database.php  pyproject.toml
CNL_proj/: settings.py
docker/: Dockerfile  README.md  build_image.sh  entrypoint.sh
event_map/: admin.py  calendar.py  forms.py  models.py  oauth2.py  urls.py  views.py
event_map/management/commands/: notify.py
event_map/migrations/: 0001_initial.py  0002_auto_20220612_1346.py
event_map/templates/event_map/: event_edit.html  index.html  mail_template.html  preference.html
frontend/: index.php  update.php
