[tool.poetry]
name = "eventmap"
version = "0.1.0"
description = "A map system where you can register events for people nearby to attend to."
authors = ["b05902132 <b05902132@csie.ntu.edu.tw>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3"
google-api-python-client = "^2.50.0"
google-auth = "^2.7.0"
tonyg-rfc3339 = "^0.1"
django-picklefield = "^3.0.1"
django-map-widgets = "^0.4.0"
google-auth-oauthlib = "^0.5.1"
google-auth-httplib2 = "^0.1.0"
dj-database-url = {git = "https://github.com/jazzband/dj-database-url"}

[tool.poetry.dev-dependencies]
django-sslserver = "^0.22"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
